sort.basic.bubble.AlgBubbleSort2.scala.error
Compilation error:
AlgBubbleSort2:7: error: ')' expected but ',' found.
      if (i,j)
           ^AlgBubbleSort2:11: error: illegal start of simple expression
    }
    ^