sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() 
{
  for (i<- getNombreValeurs()-1 to 0 by -1)
  	{
      for (j<-getNombreValeurs()-2 to 0 by -1)
      if (i,j)
      	{
          echange(i,j)
        }
    }
}